--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -7,7 +7,7 @@
 	  
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="IEEE AIKE 2018 is an international forum for academia and industries to exchange visions and ideas in the state of the art and practice of Artificial Intelligence and Knowledge Engineering. Paper Submission Deadline: July 1, 2018">
+    <meta name="description" content="IEEE AIKE 2019 is an international forum for academia and industries to exchange visions and ideas in the state of the art and practice of Artificial Intelligence and Knowledge Engineering. Paper Submission Deadline: July 1, 2019">
     <meta name="author" content="Maurizio Atzori (University of Cagliari, Italy)">
 
 	<!-- favicon -->
@@ -71,7 +71,7 @@
           <div class="col-lg-12 mx-auto">
             <h1 class="text-uppercase" style="text-shadow: black 0.08em 0.08em 0.2em;">
               <strong>Artificial Intelligence</strong> and <br/><strong>Knowledge Engineering<br/>
-			  (IEEE AIKE 2018)
+			  (IEEE AIKE 2019)
 			  </strong>
             </h1>
 
@@ -81,13 +81,13 @@
           <div class="col-lg-8 mx-auto">
             <!--<p class="text-faded mb-5 " style="color:white;text-shadow: black 0.1em 0.1em 0.1em;"></p>
 	-->		
-			<h4 class="mb-5" style="color:white;text-shadow: black 0.1em 0.1em 0.1em;">September 26-28, 2018 - <i>Laguna Hills</i>, California, USA</h4>
-			<h5 class="mb-5" style="color:white;text-shadow: black 0.1em 0.1em 0.1em;">Update: <a href="https://goo.gl/4pW5EM">Detailed Conference Program</a> available</h5>
-			<!--<h5 class="mb-5" style="color:white;text-shadow: black 0.1em 0.1em 0.1em;">Deadline extension! Abstracts: July 15; Research Papers: July 22</h5>
+			<h4 class="mb-5" style="color:white;text-shadow: black 0.1em 0.1em 0.1em;">April 24-26, 2019 - <i>Laguna Hills</i>, California, USA</h4>
+			<!--<h5 class="mb-5" style="color:white;text-shadow: black 0.1em 0.1em 0.1em;">Update: <a href="https://goo.gl/4pW5EM">Detailed Conference Program</a> available</h5>-->
+			<!--<h5 class="mb-5" style="color:white;text-shadow: black 0.1em 0.1em 0.1em;">Deadline extension! Abstracts: July 15; Research Papers: July 22</h5>-->
 			
-			<!--<a class="btn btn-primary btn-xl js-scroll-trigger" href="#cfp">Call for Papers</a>-->
+			<a class="btn btn-primary btn-xl js-scroll-trigger" href="#cfp">Call for Papers</a>
 			<a class="btn btn-warning btn-xl js-scroll-trigger" href="#keynotes">Keynote Speakers</a>
-			<a class="btn btn-primary btn-xl js-scroll-trigger" href="http://45mins.org/registration/registration.jsp">Registration</a>
+			<!--<a class="btn btn-primary btn-xl js-scroll-trigger" href="http://45mins.org/registration/registration.jsp">Registration</a>-->
 
 			
           </div>
@@ -105,9 +105,10 @@
         </div>
       </div>
       <div class="container">
+	      <!--
         <div class="row">
           <div class="col text-center">
-	     <a href="invited">Additional information on AIKE 2018 keynote talks and tutorials</a>
+	     <a href="invited">Additional information on AIKE 2019 keynote talks and tutorials</a>
 	  </div>
 	</div>
         <div class="row">
@@ -123,7 +124,6 @@ Healthcare &amp; Biomedicine</p>
 		
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
-              <!--<i class="fa fa-4x fa-heart text-primary mb-3 sr-icons"></i>  overflow:hidden-->
 			  <img src="img/Conoval_Paul4_2017small.jpg" style="width:50%;" />
               <h3 class="mb-3">Paul Conoval</h3>
               <h5>Northrop Grumman Corporation, Virginia, USA</h5>
@@ -143,7 +143,6 @@ Healthcare &amp; Biomedicine</p>
 		
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
-              <!--<i class="fa fa-4x fa-heart text-primary mb-3 sr-icons"></i>  overflow:hidden-->
 			  <img src="img/Sang-goo_Lee2.jpg" style="width:50%;" />
               <h3 class="mb-3">Sang-goo Lee</h3>
               <h5>Seoul National University (SNU), South Korea</h5>
@@ -154,13 +153,11 @@ Healthcare &amp; Biomedicine</p>
 		
 	</div> <!-- row -->
 		
-        <div class="row">
+<!--        <div class="row">
 		
 		
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
-              <!--<i class="fa fa-4x fa-newspaper-o text-primary mb-3 sr-icons"></i>-->
-
 				<img src="https://www.utdallas.edu/~bhavani.thuraisingham/Images/ThuraisinghamB.jpg" style="width:50%" />
               <h3 class="mb-3">Bhavani Thuraisingham</h3>
               <h5>University of Texas, Dallas, USA</h5>
@@ -170,7 +167,6 @@ Healthcare &amp; Biomedicine</p>
 		
            <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
-              <!--<i class="fa fa-4x fa-heart text-primary mb-3 sr-icons"></i>  overflow:hidden-->
 			  <img src="img/zaniolo_scai.png" style="width:50%;" />
               <h3 class="mb-3">Carlo Zaniolo</h3>
               <h5>University of California, Los Angeles, USA</h5>
@@ -217,7 +213,7 @@ Healthcare &amp; Biomedicine</p>
 
 ​
 
-<p>The First IEEE International Conference on Artificial Intelligence and Knowledge Engineering (AIKE 2018), is an international forum for academia and industries to exchange visions and ideas in the state of the art and practice of Artificial Intelligence and Knowledge Engineering, as well as to identify the emerging topics and define the future of Artificial Intelligence and Knowledge Engineering.</p>
+<p>The First IEEE International Conference on Artificial Intelligence and Knowledge Engineering (AIKE 2019), is an international forum for academia and industries to exchange visions and ideas in the state of the art and practice of Artificial Intelligence and Knowledge Engineering, as well as to identify the emerging topics and define the future of Artificial Intelligence and Knowledge Engineering.</p>
 </div>
 </div>
 <div id="topics" class="row text-white">
@@ -257,9 +253,9 @@ All paper submissions will be carefully reviewed by at least three experts and r
 
 ​<p><b>Note:</b>
 
-Every paper accepted for publication in the Proceedings of AIKE 2018 MUST be presented during the conference.
+Every paper accepted for publication in the Proceedings of AIKE 2019 MUST be presented during the conference.
 
-Every paper accepted for AIKE 2018 MUST have attached to it at least one registration at the full member/nonmember rate. Thus, for a paper for which all authors are students, one student author will be required to register at the full registration rate. 
+Every paper accepted for AIKE 2019 MUST have attached to it at least one registration at the full member/nonmember rate. Thus, for a paper for which all authors are students, one student author will be required to register at the full registration rate. 
 
 Failure to do so will result in removal of your paper from the conference proceedings.
 
@@ -280,8 +276,8 @@ The conference proceedings will be published by the <b>IEEE Computer Society Pre
         <div class="row">
           <div class="col-lg-10 mx-auto text-white text-center mt-3">
             <!--<p class="text-faded mb-4">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>-->
-            <!--<a class="btn btn-light btn-xl disabled js-scroll-trigger" href="#services">Submit your Paper <br/>to <i>IEEE AIKE 2018</i> <small>(available soon)</small></a>-->
-		<a class="btn btn-light btn-xl btn-success js-scroll-trigger" href="https://easychair.org/conferences/?conf=aike2018">Submit your paper <br/>to <i>IEEE AIKE 2018</i></a>
+            <!--<a class="btn btn-light btn-xl disabled js-scroll-trigger" href="#services">Submit your Paper <br/>to <i>IEEE AIKE 2019</i> <small>(available soon)</small></a>-->
+		<a class="btn btn-light btn-xl btn-success js-scroll-trigger" href="https://easychair.org/conferences/?conf=aike2019">Submit your paper <br/>to <i>IEEE AIKE 2019</i></a>
 		</div>
 
           </div>
@@ -298,11 +294,11 @@ The conference proceedings will be published by the <b>IEEE Computer Society Pre
 				            <hr class="red my-4">
 
 				<ul style="list-style-type:none">
-					<li><b>Workshop proposals deadline</b>: June 24, 2018</li>
-					<li><b>Abstracts submission deadline</b> (Regular, Short, Poster, Demo) : July 15, 2018 (extended)</li>
-					<li><b>Paper submission deadline</b> (Regular, Short, Poster, Demo) : July 22, 2018 (extended)</li>
-					<li><b>Notification of acceptance</b>: <strike>August 12, 2018</strike> August 16, 2018</li>
-					<li><b>Camera ready deadline</b>: <strike>August 26, 2018</strike> August 31, 2018</li>
+					<li><b>Workshop proposals deadline</b>: January 24, 2019</li>
+					<!--<li><b>Abstracts submission deadline</b> (Regular, Short, Poster, Demo) : February 15, 2019</li>-->
+					<li><b>Paper submission deadline</b> (Regular, Short, Poster, Demo) : February 15, 2019</li>
+					<li><b>Notification of acceptance</b>: March 15, 2019</li>
+					<!--<li><b>Camera ready deadline</b>: <strike>August 26, 2019</strike> August 31, 2019</li>-->
 				</ul>
 				</div>
 			</div>
@@ -425,7 +421,9 @@ The conference proceedings will be published by the <b>IEEE Computer Society Pre
           <div class="col-lg-12">
 
 		  <h2 class="mb-4">Committees</h2>
-		  
+
+	<h4>TBA</h4>
+		<!--  
 	<h4>General Co-Chairs</h4>
 <ul>
 <li>Farokh Bastani, University of Texas, Dallas, USA</li>
@@ -443,7 +441,7 @@ The conference proceedings will be published by the <b>IEEE Computer Society Pre
 
 <h4 class="mt-4" id="pc">Program Committee Members</h4>
 <p>
-<a href="./pc" style="color:white">List of IEEE AIKE 2018 PC Members</a>
+<a href="./pc" style="color:white">List of IEEE AIKE 2019 PC Members</a>
 </p>
 	
 <h4>C.V. Ramamoorthy Award Chair</h4>
@@ -478,8 +476,10 @@ The conference proceedings will be published by the <b>IEEE Computer Society Pre
 <h4>Publication and Registration Chair</h4>
 <ul><li>Bryan Chou, University of California, Irvine, USA
 </li></ul>
+
+-->
 	</div></div>
-      </div>
+      </div> 
     </section>
 	
 	
@@ -530,9 +530,9 @@ The conference proceedings will be published by the <b>IEEE Computer Society Pre
 {
   "@context": "http://schema.org/",
   "@type": "Event",
-  "name": "IEEE International Conference on Artificial Intelligence and Knowledge Enginering (IEEE-AIKE 2018)",
-  "startDate": "2018-10-01",
-  "endDate": "2018-10-03",
+  "name": "IEEE International Conference on Artificial Intelligence and Knowledge Enginering (IEEE-AIKE 2019)",
+  "startDate": "2019-04-24",
+  "endDate": "2019-04-26",
   "inLanguage": "English",
   "location": {
 	  "@context": "http://schema.org/",
@@ -540,11 +540,11 @@ The conference proceedings will be published by the <b>IEEE Computer Society Pre
 	  "address": "Laguna Hills, California, USA",
 	  "name": "California, USA"
   },
-  "alternateName": "AIKE 2018",
-  "description": "IEEE AIKE 2018 is an international conference to exchange visions and ideas in the state of the art and practice of Artificial Intelligence and Knowledge Engineering. Submission Deadline July 1, 2018.",
-  "identifier": "http://www.ieee-aike.org/2018/",
-  "image": "http://www.ieee-aike.org/2018/img/ieeelogo2.png",
-  "url":"http://www.ieee-aike.org/2018/"
+  "alternateName": "AIKE 2019",
+  "description": "IEEE AIKE 2019 is an international conference to exchange visions and ideas in the state of the art and practice of Artificial Intelligence and Knowledge Engineering. Submission Deadline July 1, 2019.",
+  "identifier": "http://www.ieee-aike.org/2019/",
+  "image": "http://www.ieee-aike.org/2019/img/ieeelogo2.png",
+  "url":"http://www.ieee-aike.org/2019/"
  }
 </script>	  
 	  
