--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -542,8 +542,8 @@ The conference proceedings will be published by the <b>IEEE Computer Society Pre
   "location": {
 	  "@context": "http://schema.org/",
 	  "@type": "Place",
-	  "address": "Laguna Hills, California, USA",
-	  "name": "California, USA"
+	  "address": "Cagliari, Sardinia, Italy",
+	  "name": "Cagliari, Italy"
   },
   "alternateName": "AIKE 2019",
   "description": "IEEE AIKE 2019 is an international conference to exchange visions and ideas in the state of the art and practice of Artificial Intelligence and Knowledge Engineering. Submission Deadline July 1, 2019.",
