--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -81,7 +81,7 @@
           <div class="col-lg-8 mx-auto">
             <!--<p class="text-faded mb-5 " style="color:white;text-shadow: black 0.1em 0.1em 0.1em;"></p>
 	-->		
-			<h4 class="mb-5" style="color:white;text-shadow: black 0.1em 0.1em 0.1em;">June 3-5, 2019 - <a href="https://www.sardegnaturismo.it/en/places/south/cagliari"><i>Cagliari</i></a>, Italy</h4>
+			<h4 class="mb-5" style="color:white;text-shadow: black 0.1em 0.1em 0.1em;">June 3-5, 2019 - <a href="https://www.sardegnaturismo.it/en/places/south/cagliari" style="color:white"><i>Cagliari</i></a>, Sardinia, Italy</h4>
 			<!--<h5 class="mb-5" style="color:white;text-shadow: black 0.1em 0.1em 0.1em;">Update: <a href="https://goo.gl/4pW5EM">Detailed Conference Program</a> available</h5>-->
 			<!--<h5 class="mb-5" style="color:white;text-shadow: black 0.1em 0.1em 0.1em;">Deadline extension! Abstracts: July 15; Research Papers: July 22</h5>-->
 			
