--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -427,62 +427,56 @@ The conference proceedings will be published by the <b>IEEE Computer Society Pre
 
 		  <h2 class="mb-4">Committees</h2>
 
-	<h4>TBA</h4>
-		<!--  
-	<h4>General Co-Chairs</h4>
+		  
+	<h4>General Chairs</h4>
 <ul>
-<li>Farokh Bastani, University of Texas, Dallas, USA</li>
-<li>Giovanni Pilato, Italian National Research Council, Italy</li>
-<li>Phillip Sheu, University of California, Irvine, USA</li>
-<li>Jeffrey Tsai, Asia University, Taiwan</li>
-<li>Benjamin Wah, Chinese University of Hongkong, China</li>
+<li>Maurizio Atzori, University of Cagliari, Italy</li>
+<li>Carlo Zaniolo, UCLA</li>
+<li>Phillip Sheu, UC, Irvine</li>
+<li>Benjamin Wah, Chinese University of Hong Kong</li>
 </ul>
 
-<h4 class="mt-4" id="pc">Program Co-Chairs</h4>
-<ul><li>Maurizio Atzori, University of Cagliari, Italy
-</li><li>Adina M. Panchea, École Polytechnique, France
-</li><li>Lubomir Stanchev, Cal Poly San Luis Obispo, USA
-</li></ul>
+<h4 class="mt-4" id="pc">Program Chairs (tentative)</h4>
+<ul><li>Maurizio Lenzerini, University of Sapienza, Italy</li>
+<li>Shi Gao, Google, USA</li>
+<li>Yunmook Nah, Dankook University, Korea</li>
+</ul>
 
-<h4 class="mt-4" id="pc">Program Committee Members</h4>
+<h4 class="mt-4">Program Committee Members</h4>
 <p>
-<a href="./pc" style="color:white">List of IEEE AIKE 2019 PC Members</a>
+<!--<a href="./pc" style="color:white">List of IEEE AIKE 2019 PC Members</a>-->
+		<h3>TBA</h3>
+
 </p>
 	
-<h4>C.V. Ramamoorthy Award Chair</h4>
-
-<ul><li>W.T. Chen, National Tsing Hua University, Taiwan
-</li></ul>
 
 
+<h4>Workshop Chairs (tentative)</h4>
+<ul><li>Matteo Interlandi, Microsoft, USA</li>
+<li>Adina M. Panchea, Cutii and École Polytechnique, France</li>
+</ul>
 
-<h4>Workshop Co-Chairs</h4>
+<h4>Industry Chairs</h4>
+<ul><li>Massimo Mazzeo, Facebook, USA</li>
+<li>Jianquan Liu, NEC, Japan</li></ul>
 
-<ul><li>Bharat Bhargava, Purdue University, USA 
+			
+			
+<h4>Finance Chairs</h4>
+<ul><li>George Wang, CSUN, USA</li>
+<li>Nil Bekmez, Italy</li>
+</ul>
 
-</li><li>Faizan Javed, CareerBuilder, USA
-
-</li><li>Jianquan Liu, NEC, Japan
-	
-</li><li>Yunmook Nah, Dankook University, Korea
-
-</li><li>Belle Wei, San Jose State University, USA
-</li></ul>
-
-​
-
-<h4>Finance and Local Arrangement Chair</h4>
-
-<ul><li>George Wang, CSUN, USA
-</li></ul>
-
-​
+			
+<h4>Doctoral Consortium Chairs</h4>
+<ul><li>Mattia Atzeni, University of Cagliari, Italy</li>
+<li>Muhao Chen, UCLA, USA</li>
+</ul>			
 
 <h4>Publication and Registration Chair</h4>
 <ul><li>Bryan Chou, University of California, Irvine, USA
 </li></ul>
 
--->
 	</div></div>
       </div> 
     </section>
