--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -443,10 +443,7 @@ The conference proceedings will be published by the <b>IEEE Computer Society Pre
 </ul>
 
 <h4 class="mt-4">Program Committee Members</h4>
-<p>
-<!--<a href="./pc" style="color:white">List of IEEE AIKE 2019 PC Members</a>-->
-		<h3>TBA</h3>
-
+<p><a href="./pc" style="color:white">List of IEEE AIKE 2019 PC Members</a>
 </p>
 	
 
