--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -299,11 +299,11 @@ The conference proceedings will be published by the <b>IEEE Computer Society Pre
 				            <hr class="red my-4">
 
 				<ul style="list-style-type:none">
-					<li><b>Workshop proposals deadline</b>: January 24, 2019</li>
-					<!--<li><b>Abstracts submission deadline</b> (Regular, Short, Poster, Demo) : February 15, 2019</li>-->
-					<li><b>Paper submission deadline</b> (Regular, Short, Poster, Demo) : February 15, 2019</li>
-					<li><b>Notification of acceptance</b>: March 15, 2019</li>
-					<!--<li><b>Camera ready deadline</b>: <strike>August 26, 2019</strike> August 31, 2019</li>-->
+					<li><b>Workshop proposals deadline</b>: February 24, 2019</li>
+					<li><b>Abstracts submission deadline</b> (Regular, Short, Poster, Demo) : February 15, 2019</li>
+					<li><b>Paper submission deadline</b> (Regular, Short, Poster, Demo) : March 3, 2019</li>
+					<li><b>Notification of acceptance</b>: April 15, 2019</li>
+					<!--<li><b>Camera ready deadline</b>: <strike>April 26, 2019</strike> April 31, 2019</li>-->
 				</ul>
 				</div>
 			</div>
