--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -436,7 +436,7 @@ The conference proceedings will be published by the <b>IEEE Computer Society Pre
 <li>Benjamin Wah, Chinese University of Hong Kong</li>
 </ul>
 
-<h4 class="mt-4" id="pc">Program Chairs (tentative)</h4>
+<h4 class="mt-4" id="pc">Program Chairs</h4>
 <ul><li>Maurizio Lenzerini, University of Sapienza, Italy</li>
 <li>Shi Gao, Google, USA</li>
 <li>Yunmook Nah, Dankook University, Korea</li>
@@ -448,9 +448,10 @@ The conference proceedings will be published by the <b>IEEE Computer Society Pre
 	
 
 
-<h4>Workshop Chairs (tentative)</h4>
+<h4>Workshop Chairs</h4>
 <ul><li>Matteo Interlandi, Microsoft, USA</li>
 <li>Adina M. Panchea, Cutii and École Polytechnique, France</li>
+<li>Barbara Pes, University of Cagliari</li>	
 </ul>
 
 <h4>Industry Chairs</h4>
