--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -511,6 +511,17 @@ The conference proceedings will be published by the <b>IEEE Computer Society Pre
       </div>
     </section>
 
+	<div id="preload-img" style="display: none;"> 
+		<img src="img/1.png"></img>
+	  	<img src="img/2.png"></img>
+	  	<img src="img/3.png"></img>
+	  	<img src="img/4.png"></img>
+	  	<img src="img/5.png"></img>
+	  	<img src="img/6.png"></img>
+	  	<img src="img/7.png"></img>
+	  	<img src="img/8.png"></img>
+	</div>
+	  
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
