contrast in the main nav

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -57,6 +57,12 @@
 	#committees  ul {
 		list-style-type:none;
 	}
+		
+	
+	#mainNav {
+	    background-color: rgba(0,0,0,0.2);
+	    box-shadow: 0px 1em 1em rgba(0,0,0,0.2);
+	}
 	
 	</style>
   </head>
