--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -58,10 +58,10 @@
 		list-style-type:none;
 	}
 		
-	
+	@media (min-width: 992px)
 	#mainNav {
 	    background-color: rgba(0,0,0,0.2);
-	    box-shadow: 0px 1em 1em rgba(0,0,0,0.2);
+	    box-shadow: 0px 0.8em 0.8em rgba(0,0,0,0.2);
 	}
 	
 	</style>
