--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -224,7 +224,7 @@ Healthcare &amp; Biomedicine</p>
 
 ​
 
-<p>The First IEEE International Conference on Artificial Intelligence and Knowledge Engineering (AIKE 2019), is an international forum for academia and industries to exchange visions and ideas in the state of the art and practice of Artificial Intelligence and Knowledge Engineering, as well as to identify the emerging topics and define the future of Artificial Intelligence and Knowledge Engineering.</p>
+<p>The 2nd IEEE International Conference on Artificial Intelligence and Knowledge Engineering (AIKE 2019), is an international forum for academia and industries to exchange visions and ideas in the state of the art and practice of Artificial Intelligence and Knowledge Engineering, as well as to identify the emerging topics and define the future of Artificial Intelligence and Knowledge Engineering.</p>
 </div>
 </div>
 <div id="topics" class="row text-white">
