--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,7 +6,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="The First IEEE International Conference on Artificial Intelligence and Knowledge Engineering (AIKE 2019), is an international forum for academia and industries to exchange visions and ideas in the state of the art and practice of Artificial Intelligence and Knowledge Engineering, as well as to identify the emerging topics and define the future of Artificial Intelligence and Knowledge Engineering.">
+    <meta name="description" content="The 2019 IEEE International Conference on Artificial Intelligence and Knowledge Engineering (AIKE 2019), is an international forum for academia and industries to exchange visions and ideas in the state of the art and practice of Artificial Intelligence and Knowledge Engineering, as well as to identify the emerging topics and define the future of Artificial Intelligence and Knowledge Engineering.">
     <meta name="author" content="Maurizio Atzori (University of Cagliari, Italy)">
 
 
