--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -92,7 +92,9 @@
 			<!--<h5 class="mb-5" style="color:white;text-shadow: black 0.1em 0.1em 0.1em;">Deadline extension! Abstracts: July 15; Research Papers: July 22</h5>-->
 			
 			<a class="btn btn-primary btn-xl js-scroll-trigger" href="#cfp">Call for Papers</a>
-			<a class="btn btn-warning btn-xl js-scroll-trigger" href="#keynotes">Keynote Speakers</a>
+		  	<a class="btn btn-warning btn-xl js-scroll-trigger" href="#dates">Important Dates</a>
+			<!--<a class="btn btn-warning btn-xl js-scroll-trigger" href="#keynotes">Keynote Speakers</a>-->
+		  
 			<!--<a class="btn btn-primary btn-xl js-scroll-trigger" href="http://45mins.org/registration/registration.jsp">Registration</a>-->
 
 			
@@ -113,7 +115,7 @@
       <div class="container">
         <div class="row">
           <div class="col text-center">
-	     <h3>TBA</h3>
+	     <h3>Keynote Speakers of IEEE AIKE 2019 will be announced shortly</h3>
 	  </div>
 	</div>
 	      <!--
