--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -103,6 +103,122 @@
       </div>
     </header>
 
+	  
+
+    <section>
+      <div class="container" id="location">
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <h2 class="section-heading">Location</h2>
+            <hr class="my-4">
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col">
+		<p>Location: The 2019 IEEE AIKE conference will be located in Cagliari, Italy, in the historical area of Marina. 
+Cagliari is on the southern coast of Sardinia, the second largest island in the Mediterranean famous for its white-sand beaches and clean waters.  Cagliari international airport is connected with ~70 direct flights (including many low-cost flights) to Italy and Europe. The climate is Mediterranean, with mild winters and many sunny days. The main beach, Poetto, is only 10' from the city center reachable by urban buses. 
+</p>
+<p>You can read <a href="https://www.sardegnaturismo.it/en/places/south/cagliari">more info on Cagliari at <i>Sardegna Turismo</i></a></p>
+
+		  
+	  </div>
+	</div>
+      </div> <!-- container -->
+    </section>	  
+	  
+
+	
+    <section class="bg-primary" id="cfp">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-10 mx-auto text-white">
+            <h2 class="section-heading text-white text-center">
+			<i class="fa fa-bullhorn sr-icons"></i>
+			Call for Papers</h2>
+            <hr class="light my-4">
+			
+			<p>Artificial Intelligence (AI) is concerned with computing technologies that allow machines to see, hear, talk, think, learn, and solve problems. The huge potential of applying AI for problem solving represents an exciting future that business objectives can be achieved much more effectively. In addition, business-business, business-customer, and customer-customer may be interconnected in a revolutionary way to stimulate tremendous amount of interesting activities. A core of AI is Knowledge Engineering that addresses the acquistion, understanding, description, storage, integration, processing, control, and use of knowledge, among others.</p>
+
+​
+
+<p>The 2nd IEEE International Conference on Artificial Intelligence and Knowledge Engineering (AIKE 2019), is an international forum for academia and industries to exchange visions and ideas in the state of the art and practice of Artificial Intelligence and Knowledge Engineering, as well as to identify the emerging topics and define the future of Artificial Intelligence and Knowledge Engineering.</p>
+</div>
+</div>
+<div id="topics" class="row text-white">
+<div class="col-lg-1"></div>
+​<div class="col-lg-5">
+​<h4><i class="fa fa-list-ul sr-icons"></i> TOPICS OF INTEREST​​</h4>
+<ul>
+<li>Syntactic and semantic aspects of knowledge</li>
+<li>Knowledge management</li>
+<li>Distributed knowledge and processing</li>
+<li>Real-time knowledge and processing</li>
+<li>Hardware and software of knowledge systems</li>
+<li>Knowledge understanding and modelling</li>
+<li>Knowledge discovery</li>
+<li>Query and optimization</li>
+<li>Integrity, security, and fault tolerance</li>
+<li>Machine and deep learning of knowledge</li>
+<li>Knowledge integration</li>
+<li>"Big Knowledge" and reduction</li>
+<li>Performance evaluation</li>
+<li>Communicating knowledge and agents</li>
+<li>Multi-modal interaction</li>
+<li>AI technologies including Search, planning, reasoning, knowledge representation, natural language processing, robotics and perception</li>
+<li>Knowledge-based applications</li>
+</ul>
+</div>
+
+<div class="col-lg-5">
+​<h4 id="submission">
+<i class="fa fa-edit"></i>
+SUBMISSION INSTRUCTIONS</h4>
+<div class="small">
+<p>Authors are invited to submit an 8-page (regular), 4-page (short), and 2-page (poster and demo) manuscript in double-column IEEE format. Manuscripts must be written in English and follow the instructions at <a href="https://www.ieee.org/conferences_events/conferences/publishing/templates.html">Manuscript Formatting and Templates</a>.
+​
+<p>
+All paper submissions will be carefully reviewed by at least three experts and reviews will be returned to the author(s) with comments to ensure the high quality of the accepted papers. The authors of accepted papers must guarantee that their paper will be presented at the conference. Please only submit original material where copyright of all parts is owned by the authors declared and which is not currently under review elsewhere. Please see the IEEE policies for further information.</p>
+
+​<p><b>Note:</b>
+
+Every paper accepted for publication in the Proceedings of AIKE 2019 MUST be presented during the conference.
+
+Every paper accepted for AIKE 2019 MUST have attached to it at least one registration at the full member/nonmember rate. Thus, for a paper for which all authors are students, one student author will be required to register at the full registration rate. 
+
+Failure to do so will result in removal of your paper from the conference proceedings.
+
+
+The page numbers for regular, short, workshop, and poster papers are limited to 8, 4, 6, and 2, respectively, including all figures, tables, and references. Regular and workshop papers allow up to 2 extra pages and short papers up to 1 extra page with $150 per extra page.
+</p>
+
+</div>
+
+</div>
+</div>
+	      
+        <div class="row">
+          <div class="col-lg-10 mx-auto text-white">
+
+The conference proceedings will be published by the <b>IEEE Computer Society Press</b>. Distinguished quality papers presented at the conference will be selected for the best paper/poster awards and for publication in internationally renowned journals.
+Selected papers from <a href="http://www.ieee-aike.org/2018/">previous edition of IEEE AIKE</a> have been invited for publication at <a href="https://www.journals.elsevier.com/future-generation-computer-systems">Future Generation Computer Systems (FGCS Journal, Elsevier)</a> 
+and  <a href="https://www.worldscientific.com/worldscinet/ijsc">International Journal of Semantic Computing (IJSC Journal, World Scientific)</a>.
+		</div></div>
+        <div class="row">
+          <div class="col-lg-10 mx-auto text-white text-center mt-3">
+            <!--<p class="text-faded mb-4">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>-->
+            <!--<a class="btn btn-light btn-xl disabled js-scroll-trigger" href="#services">Submit your Paper <br/>to <i>IEEE AIKE 2019</i> <small>(available soon)</small></a>-->
+		<a class="btn btn-light btn-xl btn-success js-scroll-trigger" href="https://easychair.org/conferences/?conf=aike2019">Submit your paper <br/>to <i>IEEE AIKE 2019</i></a>
+		</div>
+
+          </div>
+        </div>
+    </section>
+	  
+	  
+	  
+	  
     <section>
       <div class="container" id="keynotes">
         <div class="row">
@@ -211,91 +327,12 @@ Healthcare &amp; Biomedicine</p>
     </section>
 	
 
-
-	
-    <section class="bg-primary" id="cfp">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-10 mx-auto text-white">
-            <h2 class="section-heading text-white text-center">
-			<i class="fa fa-bullhorn sr-icons"></i>
-			Call for Papers</h2>
-            <hr class="light my-4">
-			
-			<p>Artificial Intelligence (AI) is concerned with computing technologies that allow machines to see, hear, talk, think, learn, and solve problems. The huge potential of applying AI for problem solving represents an exciting future that business objectives can be achieved much more effectively. In addition, business-business, business-customer, and customer-customer may be interconnected in a revolutionary way to stimulate tremendous amount of interesting activities. A core of AI is Knowledge Engineering that addresses the acquistion, understanding, description, storage, integration, processing, control, and use of knowledge, among others.</p>
-
-​
-
-<p>The 2nd IEEE International Conference on Artificial Intelligence and Knowledge Engineering (AIKE 2019), is an international forum for academia and industries to exchange visions and ideas in the state of the art and practice of Artificial Intelligence and Knowledge Engineering, as well as to identify the emerging topics and define the future of Artificial Intelligence and Knowledge Engineering.</p>
-</div>
-</div>
-<div id="topics" class="row text-white">
-<div class="col-lg-1"></div>
-​<div class="col-lg-5">
-​<h4><i class="fa fa-list-ul sr-icons"></i> TOPICS OF INTEREST​​</h4>
-<ul>
-<li>Syntactic and semantic aspects of knowledge</li>
-<li>Knowledge management</li>
-<li>Distributed knowledge and processing</li>
-<li>Real-time knowledge and processing</li>
-<li>Hardware and software of knowledge systems</li>
-<li>Knowledge understanding and modelling</li>
-<li>Knowledge discovery</li>
-<li>Query and optimization</li>
-<li>Integrity, security, and fault tolerance</li>
-<li>Machine and deep learning of knowledge</li>
-<li>Knowledge integration</li>
-<li>"Big Knowledge" and reduction</li>
-<li>Performance evaluation</li>
-<li>Communicating knowledge and agents</li>
-<li>Multi-modal interaction</li>
-<li>AI technologies including Search, planning, reasoning, knowledge representation, natural language processing, robotics and perception</li>
-<li>Knowledge-based applications</li>
-</ul>
-</div>
-
-<div class="col-lg-5">
-​<h4 id="submission">
-<i class="fa fa-edit"></i>
-SUBMISSION INSTRUCTIONS</h4>
-<div class="small">
-<p>Authors are invited to submit an 8-page (regular), 4-page (short), and 2-page (poster and demo) manuscript in double-column IEEE format. Manuscripts must be written in English and follow the instructions at <a href="https://www.ieee.org/conferences_events/conferences/publishing/templates.html">Manuscript Formatting and Templates</a>.
-​
-<p>
-All paper submissions will be carefully reviewed by at least three experts and reviews will be returned to the author(s) with comments to ensure the high quality of the accepted papers. The authors of accepted papers must guarantee that their paper will be presented at the conference. Please only submit original material where copyright of all parts is owned by the authors declared and which is not currently under review elsewhere. Please see the IEEE policies for further information.</p>
-
-​<p><b>Note:</b>
-
-Every paper accepted for publication in the Proceedings of AIKE 2019 MUST be presented during the conference.
-
-Every paper accepted for AIKE 2019 MUST have attached to it at least one registration at the full member/nonmember rate. Thus, for a paper for which all authors are students, one student author will be required to register at the full registration rate. 
-
-Failure to do so will result in removal of your paper from the conference proceedings.
-
-
-The page numbers for regular, short, workshop, and poster papers are limited to 8, 4, 6, and 2, respectively, including all figures, tables, and references. Regular and workshop papers allow up to 2 extra pages and short papers up to 1 extra page with $150 per extra page.
-</p>
-
-</div>
-
-</div>
-</div>
-	      
-        <div class="row">
-          <div class="col-lg-10 mx-auto text-white">
-
-The conference proceedings will be published by the <b>IEEE Computer Society Press</b>. Distinguished quality papers presented at the conference will be selected for the best paper/poster awards and for publication in internationally renowned journals.
-		</div></div>
-        <div class="row">
-          <div class="col-lg-10 mx-auto text-white text-center mt-3">
-            <!--<p class="text-faded mb-4">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>-->
-            <!--<a class="btn btn-light btn-xl disabled js-scroll-trigger" href="#services">Submit your Paper <br/>to <i>IEEE AIKE 2019</i> <small>(available soon)</small></a>-->
-		<a class="btn btn-light btn-xl btn-success js-scroll-trigger" href="https://easychair.org/conferences/?conf=aike2019">Submit your paper <br/>to <i>IEEE AIKE 2019</i></a>
-		</div>
-
-          </div>
-        </div>
-    </section>
+	  
+	  
+	  
+	  
+	  
+	  
     <section id="dates">
 		<div class="container">
 			<div class="row">
