--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -106,21 +106,27 @@
 	  
 
     <section>
-      <div class="container" id="location">
-        <div class="row">
+      <div class="container" id="about">
+        <!--<div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading">Location</h2>
             <hr class="my-4">
           </div>
         </div>
       </div>
-      <div class="container">
+      <div class="container">-->
         <div class="row">
-          <div class="col">
-		<p>Location: The 2019 IEEE AIKE conference will be located in Cagliari, Italy, in the historical area of Marina. 
-Cagliari is on the southern coast of Sardinia, the second largest island in the Mediterranean famous for its white-sand beaches and clean waters.  Cagliari international airport is connected with ~70 direct flights (including many low-cost flights) to Italy and Europe. The climate is Mediterranean, with mild winters and many sunny days. The main beach, Poetto, is only 10' from the city center reachable by urban buses. 
-</p>
-<p>You can read <a href="https://www.sardegnaturismo.it/en/places/south/cagliari">more info on Cagliari at <i>Sardegna Turismo</i></a></p>
+            <div class="col-lg-10 mx-auto ">
+		<p>The <i>IEEE International Conference on Artificial Intelligence and Knowledge Engineering</i> (IEEE AIKE), is an international forum 
+			for academia and industries to exchange visions and ideas in the state of the art and practice of 
+			AI and Knowledge Engineering, as well as to identify the emerging topics and define the future of Artificial Intelligence and Knowledge Engineering.</p>
+		    
+		<p>The 2019 IEEE AIKE conference will be located in <a href="https://www.sardegnaturismo.it/en/places/south/cagliari">Cagliari, Italy</a>, in the historical area of Marina and its main harbor. 
+                   Cagliari is on the southern coast of Sardinia, the second largest island in the Mediterranean famous for its white-sand beaches and clean waters.  
+			Cagliari international airport is connected with ~70 direct flights (including many low-cost flights) to Italy and Europe. The climate is Mediterranean, with mild winters and many sunny days. 
+			The main beach, Poetto, is only 10 minutes from the city center reachable by urban buses. <br/>
+
+		You can read <a href="https://www.sardegnaturismo.it/en/places/south/cagliari">more info on Cagliari at <i>Sardegna Turismo</i></a></p>
 
 		  
 	  </div>
