--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -120,13 +120,14 @@
 		<p>The <i>IEEE International Conference on Artificial Intelligence and Knowledge Engineering</i> (IEEE AIKE), is an international forum 
 			for academia and industries to exchange visions and ideas in the state of the art and practice of 
 			AI and Knowledge Engineering, as well as to identify the emerging topics and define the future of Artificial Intelligence and Knowledge Engineering.</p>
-		    
-		<p>The 2019 IEEE AIKE conference will be located in <a href="https://www.sardegnaturismo.it/en/places/south/cagliari">Cagliari, Italy</a>, in the historical area of Marina and its main harbor. 
-                   Cagliari is on the southern coast of Sardinia, the second largest island in the Mediterranean famous for its white-sand beaches and clean waters.  
-			Cagliari international airport is connected with ~70 direct flights (including many low-cost flights) to Italy and Europe. The climate is Mediterranean, with mild winters and many sunny days. 
-			The main beach, Poetto, is only 10 minutes from the city center reachable by urban buses. <br/>
 
-		You can read <a href="https://www.sardegnaturismo.it/en/places/south/cagliari">more info on Cagliari at <i>Sardegna Turismo</i></a></p>
+		    <br/>
+		<p>The 2019 IEEE AIKE conference will be located in <a href="https://www.sardegnaturismo.it/en/places/south/cagliari">Cagliari, Italy</a>, in the historical area of Marina by the city harbor. </p>
+                 <p><i>Location info:</i> Cagliari is on the southern coast of Sardinia, the second largest island in the Mediterranean famous for its white-sand beaches and clean waters.  
+			Cagliari international airport is connected with ~70 direct flights (including many low-cost flights) to Italy and Europe. The climate is Mediterranean, with mild winters and many sunny days. 
+			The main beach <i>Poetto</i> is only 10 minutes from the city center, reachable by urban buses.</p>
+
+		<p>You can read <a href="https://www.sardegnaturismo.it/en/places/south/cagliari">more info on Cagliari at <i>Sardegna Turismo</i></a></p>
 
 		  
 	  </div>
@@ -339,7 +340,7 @@ Healthcare &amp; Biomedicine</p>
 	  
 	  
 	  
-    <section id="dates">
+    <section id="dates" class="bg-primary">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-2"></div>
@@ -350,10 +351,15 @@ Healthcare &amp; Biomedicine</p>
 				            <hr class="red my-4">
 
 				<ul style="list-style-type:none">
-					<li><b>Workshop proposals deadline</b>: February 24, 2019</li>
+					
+					
+					
+					
 					<li><b>Abstracts submission deadline</b> (Regular, Short, Poster, Demo) : February 15, 2019</li>
 					<li><b>Paper submission deadline</b> (Regular, Short, Poster, Demo) : March 3, 2019</li>
-					<li><b>Notification of acceptance</b>: April 15, 2019</li>
+					<li><b>Notification of acceptance</b>: April 15, 2019 <br/></li>
+					
+					<li><b>Workshop proposals deadline</b>: February 24, 2019 (See the <a href="./workshops#call">call for workshop</a>)</li>
 					<!--<li><b>Camera ready deadline</b>: <strike>April 26, 2019</strike> April 31, 2019</li>-->
 				</ul>
 				</div>
