--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -340,7 +340,7 @@ Healthcare &amp; Biomedicine</p>
 	  
 	  
 	  
-    <section id="dates" class="bg-primary">
+    <section id="dates" class="bg-secondary">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-2"></div>
