--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -49,7 +49,7 @@
         -o-user-select: none;
 	}
 	#cfp .text-white a {
-		color: rgba(0, 115, 230,0.8); /*rgb(128, 191, 255); /*#99ccff;*/
+		color: rgba(0,0,0;0.8); /*rgba(0, 115, 230,0.8); rgb(128, 191, 255); /*#99ccff;*/
 		font-weight: bold;
 		
 	}
@@ -341,7 +341,7 @@ Healthcare &amp; Biomedicine</p>
 	  
 	  
     <section id="dates" class="bg-secondary">
-		<div class="container">
+		<div class="container text-white">
 			<div class="row">
 				<div class="col-lg-2"></div>
 				<div class="col-lg-8">
@@ -357,8 +357,8 @@ Healthcare &amp; Biomedicine</p>
 					
 					<li><b>Abstracts submission deadline</b> (Regular, Short, Poster, Demo) : February 15, 2019</li>
 					<li><b>Paper submission deadline</b> (Regular, Short, Poster, Demo) : March 3, 2019</li>
-					<li><b>Notification of acceptance</b>: April 15, 2019 <br/></li>
-					
+					<li><b>Notification of acceptance</b>: April 15, 2019 </li>
+					<li></li>
 					<li><b>Workshop proposals deadline</b>: February 24, 2019 (See the <a href="./workshops#call">call for workshop</a>)</li>
 					<!--<li><b>Camera ready deadline</b>: <strike>April 26, 2019</strike> April 31, 2019</li>-->
 				</ul>
