--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -545,9 +545,10 @@ Healthcare &amp; Biomedicine</p>
             <h2 class="section-heading">Contacts and Visa Application</h2>
             <hr class="my-4">
             <p class="mb-5fdas">For questions related to workshops and paper submissions, please contact <a href="mailto:aike@uci.edu">aike@uci.edu</a>.  
-		    For visa and travel related inquires, please contact <a href="mailto:chunghc3@uci.edu">Bryan Chou (chunghc3@uci.edu)</a>. 
+		    For visa and travel related inquires, please visit the <a href="http://vistoperitalia.esteri.it/home/en">Official Italian Visa Site</a>.
 		    Invitation letters will not be provided until registration is completed.</p>
-	    <p class="mb-5fdas"><b>Authors of accepted papers who need an invitation letter for visa application please contact <a href="mailto:aike@uci.edu">aike@uci.edu</a>.</b></p>  
+	    <p class="mb-5fdas"><b>Authors of accepted papers who need an invitation letter for visa application 
+		    please contact <a href="mailto:atzori@unica.it">Maurizio Atzori (atzori@unica.it)</a>.</b></p>  
 		  
           </div>
         </div>
