--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -49,7 +49,7 @@
         -o-user-select: none;
 	}
 	#cfp .text-white a {
-		color: rgba(0,0,0;0.8); /*rgba(0, 115, 230,0.8); rgb(128, 191, 255); /*#99ccff;*/
+		color: rgb(0,0,0); /*rgba(0, 115, 230,0.8); rgb(128, 191, 255); /*#99ccff;*/
 		font-weight: bold;
 		
 	}
@@ -477,7 +477,7 @@ Healthcare &amp; Biomedicine</p>
 	
 
 	
-<section id="committees" class="bg-dark text-white">
+<section id="committees">
       <div class="container">
 		<div class="row text-center">
           <div class="col-lg-12">
@@ -538,7 +538,7 @@ Healthcare &amp; Biomedicine</p>
 	
 	
 	
-    <section id="contacts">
+    <section id="contacts" class="bg-dark text-white">
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
