--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -49,7 +49,7 @@
         -o-user-select: none;
 	}
 	#cfp .text-white a {
-		color: rgb(0,0,0); /*rgba(0, 115, 230,0.8); rgb(128, 191, 255); /*#99ccff;*/
+		color: rgba(0,0,0,0.7); /*rgba(0, 115, 230,0.8); rgb(128, 191, 255); /*#99ccff;*/
 		font-weight: bold;
 		
 	}
@@ -487,20 +487,20 @@ Healthcare &amp; Biomedicine</p>
 		  
 	<h4>General Chairs</h4>
 <ul>
-<li>Maurizio Atzori, University of Cagliari, Italy</li>
-<li>Carlo Zaniolo, UCLA</li>
-<li>Phillip Sheu, UC, Irvine</li>
-<li>Benjamin Wah, Chinese University of Hong Kong</li>
+<li><a href="http://atzori.webofcode.org/">Maurizio Atzori</a>, University of Cagliari, Italy</li>
+<li><a href="http://web.cs.ucla.edu/~zaniolo/">Carlo Zaniolo</a>, UCLA</li>
+<li><a href="http://engineering.uci.edu/users/chen-yu-phillip-sheu">Phillip Sheu</a>, UC, Irvine</li>
+<li><a href="https://wah.cse.cuhk.edu.hk/wah/">Benjamin Wah</a>, Chinese University of Hong Kong</li>
 </ul>
 
 <h4 class="mt-4" id="pc">Program Chairs</h4>
-<ul><li>Maurizio Lenzerini, University of Sapienza, Italy</li>
-<li>Shi Gao, Google, USA</li>
-<li>Yunmook Nah, Dankook University, Korea</li>
+<ul><li><a href="https://www.dis.uniroma1.it/~lenzerin/">Maurizio Lenzerini</a>, University of Sapienza, Italy</li>
+<li><a href="https://www.linkedin.com/in/shi-gao-20b05817/">Shi Gao</a>, Google, USA</li>
+<li><a href="http://dblab.dankook.ac.kr/">Yunmook Nah</a>, Dankook University, Korea</li>
 </ul>
 
 <h4 class="mt-4">Program Committee Members</h4>
-<p><a href="./pc" style="color:white">List of IEEE AIKE 2019 PC Members</a>
+<p><a href="./pc" style="color:gray;font-weight: bold;">List of IEEE AIKE 2019 PC Members</a>
 </p>
 	
 
