--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -53,6 +53,10 @@
 		font-weight: bold;
 		
 	}
+		
+	#committee a {
+		font-weight: bold;
+	}
 	
 	#committees  ul {
 		list-style-type:none;
@@ -506,30 +510,30 @@ Healthcare &amp; Biomedicine</p>
 
 
 <h4>Workshop Chairs</h4>
-<ul><li>Matteo Interlandi, Microsoft, USA</li>
-<li>Adina M. Panchea, Cutii and École Polytechnique, France</li>
-<li>Barbara Pes, University of Cagliari</li>	
+<ul><li><a href="https://interesaaat.github.io/">Matteo Interlandi</a>, Microsoft, USA</li>
+<li><a href="http://adinapanchea.com/about/">Adina M. Panchea</a>, Cutii and École Polytechnique, France</li>
+<li><a href="http://people.unica.it/barbarapes/">Barbara Pes</a>, University of Cagliari</li>	
 </ul>
 
 <h4>Industry Chairs</h4>
-<ul><li>Massimo Mazzeo, Facebook, USA</li>
-<li>Jianquan Liu, NEC, Japan</li></ul>
+<ul><li><a href="https://www.facebook.com/gmmazzeo">Massimo Mazzeo</a>, Facebook, USA</li>
+<li><a href="https://www.linkedin.com/in/jianquan-liu-5009a158/">Jianquan Liu</a>, NEC, Japan</li></ul>
 
 			
 			
 <h4>Finance Chairs</h4>
-<ul><li>George Wang, CSUN, USA</li>
-<li>Nil Bekmez, Italy</li>
+<ul><li><a href="https://www.csun.edu/~twang/">George Wang</a>, CSUN, USA</li>
+<li><a href="">Nil Bekmez</a>, Italy</li>
 </ul>
 
 			
 <h4>Doctoral Consortium Chairs</h4>
-<ul><li>Mattia Atzeni, University of Cagliari, Italy</li>
-<li>Muhao Chen, UCLA, USA</li>
+<ul><li><a href="">Mattia Atzeni</a>, University of Cagliari, Italy</li>
+<li><a href="http://yellowstone.cs.ucla.edu/~muhao/">Muhao Chen</a>, UCLA, USA</li>
 </ul>			
 
 <h4>Publication and Registration Chair</h4>
-<ul><li>Bryan Chou, University of California, Irvine, USA
+<ul><li><a href="">Bryan Chou</a>, University of California, Irvine, USA
 </li></ul>
 
 	</div></div>
