--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -131,7 +131,7 @@
 			Cagliari international airport is connected with ~70 direct flights (including many low-cost flights) to Italy and Europe. The climate is Mediterranean, with mild winters and many sunny days. 
 			The main beach <i>Poetto</i> is only 10 minutes from the city center, reachable by urban buses.</p>
 
-		<p>You can read <a href="https://www.sardegnaturismo.it/en/places/south/cagliari">more info on Cagliari at <i>Sardegna Turismo</i></a></p>
+		<p>You can read <a href="https://www.sardegnaturismo.it/en/places/south/cagliari">more info on Cagliari at <i>Sardegna Turismo</i></a>.</p>
 
 		  
 	  </div>
