--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -500,7 +500,7 @@ Healthcare &amp; Biomedicine</p>
 <h4 class="mt-4" id="pc">Program Chairs</h4>
 <ul><li><a href="https://www.dis.uniroma1.it/~lenzerin/">Maurizio Lenzerini</a>, University of Sapienza, Italy</li>
 <li><a href="https://www.linkedin.com/in/shi-gao-20b05817/">Shi Gao</a>, Google, USA</li>
-<li><a href="http://dblab.dankook.ac.kr/">Yunmook Nah</a>, Dankook University, Korea</li>
+<li><a href="http://dblab.dankook.ac.kr/eng/">Yunmook Nah</a>, Dankook University, Korea</li>
 </ul>
 
 <h4 class="mt-4">Program Committee Members</h4>
