--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -126,7 +126,7 @@
 			AI and Knowledge Engineering, as well as to identify the emerging topics and define the future of Artificial Intelligence and Knowledge Engineering.</p>
 
 		    <br/>
-		<p>The 2019 IEEE AIKE conference will be located in <a href="https://www.sardegnaturismo.it/en/places/south/cagliari">Cagliari, Italy</a>, in the historical area of Marina by the city harbor. </p>
+		<p>The <a href="http://www.ieee-aike.org/2018/">previous edition of IEEE AIKE</a> was held in Laguna Hills, California (USA).  The 2019 IEEE AIKE conference will be located in <a href="https://www.sardegnaturismo.it/en/places/south/cagliari">Cagliari, Italy</a>, in the historical area of Marina by the city harbor. </p>
                  <p><i>Location info:</i> Cagliari is on the southern coast of Sardinia, the second largest island in the Mediterranean famous for its white-sand beaches and clean waters.  
 			Cagliari international airport is connected with ~70 direct flights (including many low-cost flights) to Italy and Europe. The climate is Mediterranean, with mild winters and many sunny days. 
 			The main beach <i>Poetto</i> is only 10 minutes from the city center, reachable by urban buses.</p>
