--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -93,7 +93,7 @@
 	-->		
 			<h4 class="mb-5" style="color:white;text-shadow: black 0.1em 0.1em 0.1em;">June 3-5, 2019 - <a href="https://www.sardegnaturismo.it/en/places/south/cagliari" style="color:white"><i>Cagliari</i></a>, Sardinia, Italy</h4>
 			<!--<h5 class="mb-5" style="color:white;text-shadow: black 0.1em 0.1em 0.1em;">Update: <a href="https://goo.gl/4pW5EM">Detailed Conference Program</a> available</h5>-->
-			<!--<h5 class="mb-5" style="color:white;text-shadow: black 0.1em 0.1em 0.1em;">Deadline extension! Abstracts: July 15; Research Papers: July 22</h5>-->
+			<h5 class="mb-5" style="color:white;text-shadow: black 0.1em 0.1em 0.1em;">Deadline extension! Research Papers due on: <b>March 15th</b></h5>-->
 			
 			<a class="btn btn-primary btn-xl js-scroll-trigger" href="#cfp">Call for Papers</a>
 		  	<a class="btn btn-warning btn-xl js-scroll-trigger" href="#dates">Important Dates</a>
@@ -359,11 +359,11 @@ Healthcare &amp; Biomedicine</p>
 					
 					
 					
-					<li><b>Abstracts submission deadline</b> (Regular, Short, Poster, Demo) : February 15, 2019</li>
-					<li><b>Paper submission deadline</b> (Regular, Short, Poster, Demo) : March 3, 2019</li>
+					<!--<li><b>Abstracts submission deadline</b> (Regular, Short, Poster, Demo) : February 15, 2019</li> -->
+					<li><b>Paper submission deadline</b> (Regular, Short, Poster, Demo) : <strike>March 3</strike> <b>March 15</b>, 2019</li>
 					<li><b>Notification of acceptance</b>: April 12, 2019 </li>
 					<li></li>
-					<li><b>Workshop proposals deadline</b>: February 24, 2019 (See the <a href="./workshops#call">call for workshop</a>)</li>
+					<li><b>Workshop proposals deadline</b>: <strike>February 24</strike> March 15, 2019 (See the <a href="./workshops#call">call for workshop</a>)</li>
 					<!--<li><b>Camera ready deadline</b>: <strike>April 26, 2019</strike> April 31, 2019</li>-->
 				</ul>
 				</div>
