--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -93,8 +93,8 @@
 	-->		
 			<h4 class="mb-5" style="color:white;text-shadow: black 0.1em 0.1em 0.1em;">June 3-5, 2019 - <a href="https://www.sardegnaturismo.it/en/places/south/cagliari" style="color:white"><i>Cagliari</i></a>, Sardinia, Italy</h4>
 			<!--<h5 class="mb-5" style="color:white;text-shadow: black 0.1em 0.1em 0.1em;">Update: <a href="https://goo.gl/4pW5EM">Detailed Conference Program</a> available</h5>-->
-			<h5 class="mb-5" style="color:white;text-shadow: black 0.1em 0.1em 0.1em;">Deadline extension! Research Papers due on: <b>March 15th</b></h5>-->
-			
+			<h5 class="mb-5" style="color:white;text-shadow: black 0.1em 0.1em 0.1em;">Doctoral Consortium and <b>young researcher travel Award</b> deadline: <b>April 25th</b></h5>
+		  	
 			<a class="btn btn-primary btn-xl js-scroll-trigger" href="#cfp">Call for Papers</a>
 		  	<a class="btn btn-warning btn-xl js-scroll-trigger" href="#dates">Important Dates</a>
 			<!--<a class="btn btn-warning btn-xl js-scroll-trigger" href="#keynotes">Keynote Speakers</a>-->
