--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -362,7 +362,7 @@ Healthcare &amp; Biomedicine</p>
 					<!--<li><b>Abstracts submission deadline</b> (Regular, Short, Poster, Demo) : February 15, 2019</li> -->
 					<li><b>Paper submission deadline</b> (Regular, Short, Poster, Demo) : <strike>March 3</strike> <b>March 15</b>, 2019</li>
 					<li><b>Notification of acceptance</b>: April 12, 2019 </li>
-					<li><b>Camera ready and Registration deadline</b>: April 26, 2019</li>
+					<li><b>Camera ready and Registration deadline</b>: <strike>April 26, 2019</strike> April 30, 2019</li>
 					<li></li>
 					<li><b>Workshop proposals deadline</b>: <strike>February 24</strike> March 15, 2019 (See the <a href="./workshops#call">call for workshop</a>)</li>
 					<li><b>Doctoral Consortium paper submission deadline</b>: April 25, 2019</li>
