--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -95,9 +95,11 @@
 			<!--<h5 class="mb-5" style="color:white;text-shadow: black 0.1em 0.1em 0.1em;">Update: <a href="https://goo.gl/4pW5EM">Detailed Conference Program</a> available</h5>-->
 			<h5 class="mb-5" style="color:white;text-shadow: black 0.1em 0.1em 0.1em;">Doctoral Consortium and <b>young researcher travel Award</b> deadline: <b>April 25th</b></h5>
 		  	
-			<a class="btn btn-primary btn-xl js-scroll-trigger" href="#cfp">Call for Papers</a>
-		  	<a class="btn btn-warning btn-xl js-scroll-trigger" href="#dates">Important Dates</a>
+			<!-- <a class="btn btn-primary btn-xl js-scroll-trigger" href="#cfp">Call for Papers</a>
+		  	
 			<!--<a class="btn btn-warning btn-xl js-scroll-trigger" href="#keynotes">Keynote Speakers</a>-->
+   		  <a class="btn btn-primary btn-xl js-scroll-trigger" href="http://www.cvent.com/d/m6qfg7">Registration</a>
+		  <a class="btn btn-warning btn-xl js-scroll-trigger" href="#dates">Important Dates</a>
 		  
 			<!--<a class="btn btn-primary btn-xl js-scroll-trigger" href="http://45mins.org/registration/registration.jsp">Registration</a>-->
 
