--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -243,38 +243,41 @@ and  <a href="https://www.worldscientific.com/worldscinet/ijsc">International Jo
         </div>
       </div>
       <div class="container">
-        <div class="row">
+        <!--<div class="row">
           <div class="col text-center">
 	     <h3>Keynote Speakers of IEEE AIKE 2019 will be announced shortly</h3>
 	  </div>
-	</div>
+	</div>-->
 	      <!--
         <div class="row">
           <div class="col text-center">
 	     <a href="invited">Additional information on AIKE 2019 keynote talks and tutorials</a>
 	  </div>
-	</div>
+	</div>-->
+	      
         <div class="row">
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
-              <img src="https://people.wright.edu/sites/people.wright.edu/files/styles/profile_full_page/public/user-uploads/profile-photo/tn-bourbakis.jpg?itok=ETfE1Shy" style="width:50%;"/>
-              <h3 class="mb-3">Nikolaos Bourbakis</h3>
+              <img src="http://helios.mi.parisdescartes.fr/~themisp/themis.jpg" style="width:50%;"/>
+              <h3 class="mb-3">Themis Palpanas</h3>
               <h5>Wright State University, USA</h5>
-              <p class="text-muted mb-0">Synergies of AI and Knowledge Engineering for 
-Healthcare &amp; Biomedicine</p>
+              <p class="text-muted mb-0">Analytics and Knowledge Discovery from Big Data Series Collections</p>
             </div>
           </div>
 		
-          <div class="col-lg-3 col-md-6 text-center">
+           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
-			  <img src="img/Conoval_Paul4_2017small.jpg" style="width:50%;" />
-              <h3 class="mb-3">Paul Conoval</h3>
-              <h5>Northrop Grumman Corporation, Virginia, USA</h5>
-              <p class="text-muted mb-0">TBA</p>
+			  <img src="img/zaniolo_scai.png" style="width:50%;" />
+              <h3 class="mb-3">Carlo Zaniolo</h3>
+              <h5>University of California, Los Angeles, USA</h5>
+              <p class="text-muted mb-0">Performance and Scalability in Knowledge-Based Applications 
+		      by Aggregate-based Non-Monotonic Reasoning</p>
             </div>
           </div>
 		
+	</div> <!-- row -->
 		
+		<!--
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
               <img src="http://people.cs.georgetown.edu/~ophir/images/frieder-2016.jpg" style="width:50%"/>
