--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -258,16 +258,16 @@ and  <a href="https://www.worldscientific.com/worldscinet/ijsc">International Jo
         <div class="row">
           <div class="col-lg-6 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
-              <img src="http://helios.mi.parisdescartes.fr/~themisp/themis.jpg" style="width:80%;"/>
+              <img src="http://helios.mi.parisdescartes.fr/~themisp/themis.jpg" style="width:56%;"/>
               <h3 class="mb-3">Themis Palpanas</h3>
-              <h5>Wright State University, USA</h5>
+              <h5>Paris Descartes University, France</h5>
               <p class="text-muted mb-0">Analytics and Knowledge Discovery from Big Data Series Collections</p>
             </div>
           </div>
 		
            <div class="col-lg-6 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
-			  <img src="img/zaniolo_scai.png" style="width:100%;" />
+			  <img src="img/zaniolo_scai.png" style="width:70%;" />
               <h3 class="mb-3">Carlo Zaniolo</h3>
               <h5>University of California, Los Angeles, USA</h5>
               <p class="text-muted mb-0">Performance and Scalability in Knowledge-Based Applications 
