--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -93,13 +93,14 @@
 	-->		
 			<h4 class="mb-5" style="color:white;text-shadow: black 0.1em 0.1em 0.1em;">June 3-5, 2019 - <a href="https://www.sardegnaturismo.it/en/places/south/cagliari" style="color:white"><i>Cagliari</i></a>, Sardinia, Italy</h4>
 			<!--<h5 class="mb-5" style="color:white;text-shadow: black 0.1em 0.1em 0.1em;">Update: <a href="https://goo.gl/4pW5EM">Detailed Conference Program</a> available</h5>-->
-			<!--<h5 class="mb-5" style="color:white;text-shadow: black 0.1em 0.1em 0.1em;">Doctoral Consortium and <b>young researcher travel Award</b> deadline: <b>April 25th</b></h5>-->
-		  	<h5 class="mb-5" style="color:white;text-shadow: black 0.1em 0.1em 0.1em;"><b>Registration <a href="http://www.cvent.com/d/m6qfg7">link now available</a></b>, deadline for authors: <i>May 20th</i></h5>
+			<!--<h5 class="mb-5" style="color:white;text-shadow: black 0.1em 0.1em 0.1em;">Doctoral Consortium and <b>young researcher travel Award</b> deadline: <b>April 25th</b></h5>
+		  	<h5 class="mb-5" style="color:white;text-shadow: black 0.1em 0.1em 0.1em;"><b>Registration <a href="http://www.cvent.com/d/m6qfg7">link now available</a></b>, deadline for authors: <i>May 20th</i></h5>-->
 		  	<h5 class="mb-5" style="color:white;text-shadow: black 0.1em 0.1em 0.1em;"><b>Preliminary <a href="https://docs.google.com/document/d/e/2PACX-1vSlXTcg7M_rVCkqCSEgUi526jUc6CEfP_AwlSrGgSHmNWkUZVjDsPUyLyWmio-2Wv8dWJJb6dUax6vX/pub">Conference Program</a></b> now available</h5>
 			<!-- <a class="btn btn-primary btn-xl js-scroll-trigger" href="#cfp">Call for Papers</a>
 		  	
 			<!--<a class="btn btn-warning btn-xl js-scroll-trigger" href="#keynotes">Keynote Speakers</a>-->
    		  <a class="btn btn-primary btn-xl js-scroll-trigger" href="http://www.cvent.com/d/m6qfg7">Registration</a>
+		  <a class="btn btn-warning btn-xl js-scroll-trigger" href="#keynotes">Keynote Speakers</a>
 		  <a class="btn btn-warning btn-xl js-scroll-trigger" href="https://docs.google.com/document/d/e/2PACX-1vSlXTcg7M_rVCkqCSEgUi526jUc6CEfP_AwlSrGgSHmNWkUZVjDsPUyLyWmio-2Wv8dWJJb6dUax6vX/pub">Program (Preliminary)</a>
 		  
 			<!--<a class="btn btn-primary btn-xl js-scroll-trigger" href="http://45mins.org/registration/registration.jsp">Registration</a>-->
